# cellular_automata

./: .gitignore  Cargo.toml  DOCUMENTATION.md
docs/requirements/: library-conversion.md
runs/: index.html  manifest.tsv  rule030_w401_g200_zp_20260419_192229_job1.html  rule030_w401_g200_zp_20260419_192233_job1.html  rule030_w401_g200_zp_20260419_192234_job1.html  rule030_w401_g200_zp_20260419_192235_job1.html  rule030_w401_g200_zp_20260420_093914_job1.html  rule030_w401_g220_wr_20260419_192347_job3.html
src/: export.rs  json.rs  lib.rs  main.rs  sim.rs  svg.rs  ui.rs
